Bug 399008 - Assert when saving default resource
Summary: Assert when saving default resource
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-09-24 08:02 UTC by Jaime Torres
Modified: 2020-01-15 09:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Can't paste directly as it is detected as spam (8.04 KB, text/plain)
2018-09-25 07:19 UTC, Jaime Torres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaime Torres 2018-09-24 08:02:48 UTC
Application: krita (4.2.0-pre-alpha (git 14d829e))
 (Compiled from sources)
Qt Version: 5.11.1
Frameworks Version: 5.51.0
Operating System: Linux 4.18.5-1-default x86_64
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:

Create a new file (probably optional step)
Settings -> Manage Resources
Click on Krita_4_Default_Resources in Active Bundles, then Edit bundle....
In the Edit Resource Bundle window, press Save.

ASSERT: "!store->hasFile(resType + "/" + resource->shortFilename())" in file /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisResourceBundle.cpp, line 267

The crash can be reproduced every time.

-- Backtrace:
Application: Krita (krita), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
28	  return SYSCALL_CANCEL (nanosleep, requested_time, remaining);
[Current thread is 1 (Thread 0x7ff422476400 (LWP 13696))]

Thread 8 (Thread 0x7ff402219700 (LWP 13711)):
#0  0x00007ff428a1b9e5 in qt_gettime () at kernel/qelapsedtimer_unix.cpp:181
#1  0x00007ff428a1a219 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7ff3ec000be0) at kernel/qtimerinfo_unix.cpp:91
#2  0x00007ff428a1a815 in QTimerInfoList::timerWait (this=this@entry=0x7ff3ec000be0, tm=...) at kernel/qtimerinfo_unix.cpp:388
#3  0x00007ff428a19764 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/tools/qhash.h:462
#4  0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#5  0x00007ff428817e96 in QThread::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#6  0x00007ff41ee6f282 in QQuickPixmapReader::run (this=0x11bbe290) at /usr/src/debug/libqt5-qtdeclarative-5.11.1-1.3.x86_64/src/quick/util/qquickpixmapcache.cpp:934
#7  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#8  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#9  0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7ff408b70700 (LWP 13710)):
#0  0x00007ff4277cb3c6 in __GI_ppoll (fds=fds@entry=0x7ff3f4000d28, nfds=nfds@entry=1, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:39
#1  0x00007ff428a180a1 in ppoll (__ss=<optimized out>, __timeout=<optimized out>, __nfds=<optimized out>, __fds=<optimized out>) at /usr/include/bits/poll2.h:77
#2  qt_ppoll (timeout_ts=0x0, nfds=1, fds=0x7ff3f4000d28) at kernel/qcore_unix.cpp:112
#3  qt_safe_poll (fds=0x7ff3f4000d28, nfds=nfds@entry=1, timeout_ts=timeout_ts@entry=0x0) at kernel/qcore_unix.cpp:133
#4  0x00007ff428a19519 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/tools/qarraydata.h:209
#5  0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007ff428817e96 in QThread::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007ff41ebe22c5 in QQmlThreadPrivate::run (this=0x11a777b0) at /usr/src/debug/libqt5-qtdeclarative-5.11.1-1.3.x86_64/src/qml/qml/ftw/qqmlthread.cpp:148
#8  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#9  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#10 0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7ff403fff700 (LWP 13708)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007ff428816db0 in QtLinuxFutex::_q_futex (val3=0, addr2=0x0, val2=0, val=<optimized out>, op=0, addr=<optimized out>) at thread/qfutex_p.h:105
#2  QtLinuxFutex::futexWait<QBasicAtomicInteger<unsigned int> > (expectedValue=<optimized out>, futex=...) at thread/qfutex_p.h:107
#3  futexSemaphoreTryAcquire_loop<true> (u=..., curValue=<optimized out>, nn=nn@entry=8589934593, timeout=timeout@entry=-1) at thread/qsemaphore.cpp:221
#4  0x00007ff428816c22 in futexSemaphoreTryAcquire<true> (timeout=<optimized out>, n=n@entry=1, u=...) at /usr/include/c++/8/bits/atomic_base.h:512
#5  QSemaphore::tryAcquire (this=0x10712120, n=n@entry=1, timeout=timeout@entry=-1) at thread/qsemaphore.cpp:486
#6  0x00007ff42ca95eb9 in KisTileDataSwapper::waitForWork (this=this@entry=0x7ff42cfdadc0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#7  0x00007ff42ca96086 in KisTileDataSwapper::run (this=0x7ff42cfdadc0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#8  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#9  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#10 0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7ff409469700 (LWP 13704)):
#0  0x00007ff4277cb3c6 in __GI_ppoll (fds=fds@entry=0x7ff404000d88, nfds=nfds@entry=1, timeout=<optimized out>, timeout@entry=0x7ff409468bd0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:39
#1  0x00007ff428a17fb0 in ppoll (__ss=<optimized out>, __timeout=<optimized out>, __nfds=<optimized out>, __fds=<optimized out>) at /usr/include/bits/poll2.h:77
#2  qt_ppoll (timeout_ts=0x7ff409468bd0, nfds=1, fds=0x7ff404000d88) at kernel/qcore_unix.cpp:112
#3  qt_safe_poll (fds=0x7ff404000d88, nfds=nfds@entry=1, timeout_ts=timeout_ts@entry=0x7ff409468c40) at kernel/qcore_unix.cpp:142
#4  0x00007ff428a19519 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/tools/qarraydata.h:209
#5  0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007ff428817e96 in QThread::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#8  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#9  0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7ff417661700 (LWP 13703)):
#0  futex_wait_cancelable (private=0, expected=0, futex_word=0x1abfb44) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x1abfaf0, cond=0x1abfb18) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x1abfb18, mutex=0x1abfaf0) at pthread_cond_wait.c:655
#3  0x00007ff41796010b in util_queue_thread_func () from /usr/lib64/dri/i965_dri.so
#4  0x00007ff41795fe77 in impl_thrd_routine () from /usr/lib64/dri/i965_dri.so
#5  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#6  0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7ff41d630700 (LWP 13700)):
#0  0x00007ff4277cb3c6 in __GI_ppoll (fds=fds@entry=0x7ff41000df58, nfds=nfds@entry=1, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:39
#1  0x00007ff428a180a1 in ppoll (__ss=<optimized out>, __timeout=<optimized out>, __nfds=<optimized out>, __fds=<optimized out>) at /usr/include/bits/poll2.h:77
#2  qt_ppoll (timeout_ts=0x0, nfds=1, fds=0x7ff41000df58) at kernel/qcore_unix.cpp:112
#3  qt_safe_poll (fds=0x7ff41000df58, nfds=nfds@entry=1, timeout_ts=timeout_ts@entry=0x0) at kernel/qcore_unix.cpp:133
#4  0x00007ff428a19519 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/tools/qarraydata.h:209
#5  0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007ff428817e96 in QThread::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007ff42a5b3545 in ?? () from /usr/lib64/libQt5DBus.so.5
#8  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#9  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#10 0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7ff42026c700 (LWP 13698)):
#0  0x00007ff4277cb2c9 in __GI___poll (fds=0x7ff42026bc78, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007ff42a36bcc7 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007ff42a36d8ea in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007ff4207c96d9 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007ff428821a67 in QThreadPrivate::start(void*) () at thread/qthread_unix.cpp:367
#5  0x00007ff4269ee554 in start_thread (arg=<optimized out>) at pthread_create.c:463
#6  0x00007ff4277d5ccf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7ff422476400 (LWP 13696)):
[KCrash Handler]
#6  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#7  0x00007ff4276fc4e9 in __GI_abort () at abort.c:79
#8  0x00007ff4287e09ad in qt_message_fatal (context=..., message=<synthetic pointer>...) at global/qlogging.cpp:1842
#9  QMessageLogger::fatal (this=this@entry=0x7fffeae2aae0, msg=msg@entry=0x7ff428a82eb0 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:880
#10 0x00007ff4287dfe2d in qt_assert (assertion=assertion@entry=0x7ff42df05d88 "!store->hasFile(resType + \"/\" + resource->shortFilename())", file=file@entry=0x7ff42df059d0 "/home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisResourceBundle.cpp", line=line@entry=267) at ../../include/QtCore/../../src/corelib/global/qlogging.h:91
#11 0x00007ff42d9e2577 in saveResourceToStore (resource=resource@entry=0x44a6a00, store=0x1b4fea50, resType=...) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisResourceBundle.cpp:267
#12 0x00007ff42d9e33c6 in KisResourceBundle::save (this=0x1b4a2810) at /usr/include/qt5/QtCore/qscopedpointer.h:138
#13 0x00007ff40816b136 in ResourceManager::saveBundle (this=0x1156a4e0, dlgCreateBundle=...) at /home/jtorres/kdesrc/extragear/graphics/krita/plugins/extensions/resourcemanager/resourcemanager.cpp:209
#14 0x00007ff40818334e in DlgBundleManager::editBundle (this=0x10342590) at /home/jtorres/kdesrc/extragear/graphics/krita/plugins/extensions/resourcemanager/dlg_bundle_manager.cpp:335
#15 0x00007ff408189275 in DlgBundleManager::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /home/jtorres/kdesrc/build/extragear/graphics/krita/plugins/extensions/resourcemanager/kritaresourcemanager_autogen/EWIEGA46WW/moc_dlg_bundle_manager.cpp:110
#16 0x00007ff4289f360b in QMetaObject::activate(QObject*, int, int, void**) () at kernel/qobject.cpp:3771
#17 0x00007ff42a93a802 in QAbstractButton::clicked(bool) () from /usr/lib64/libQt5Widgets.so.5
#18 0x00007ff42a93aa1a in ?? () from /usr/lib64/libQt5Widgets.so.5
#19 0x00007ff42a93bddf in ?? () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007ff42a93bfb5 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#21 0x00007ff42a892808 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007ff42a8544b1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007ff42a85bd48 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007ff42d955d5d in KisApplication::notify (this=<optimized out>, receiver=0x12cab1e0, event=0x7fffeae2bb30) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisApplication.cpp:610
#25 0x00007ff4289ca3c9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at ../../include/QtCore/5.11.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:307
#26 0x00007ff42a85b049 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#27 0x00007ff42a8ad344 in ?? () from /usr/lib64/libQt5Widgets.so.5
#28 0x00007ff42a8afece in ?? () from /usr/lib64/libQt5Widgets.so.5
#29 0x00007ff42a8544b1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#30 0x00007ff42a85bb00 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#31 0x00007ff42d955d5d in KisApplication::notify (this=<optimized out>, receiver=0x12bfcc00, event=0x7fffeae2bf90) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisApplication.cpp:610
#32 0x00007ff4289ca3c9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at ../../include/QtCore/5.11.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:307
#33 0x00007ff428d849c3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#34 0x00007ff428d868f5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#35 0x00007ff428d6102b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#36 0x00007ff42085c2e6 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#37 0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#38 0x00007ff42aa3f28d in QDialog::exec() () from /usr/lib64/libQt5Widgets.so.5
#39 0x00007ff40816bc21 in ResourceManager::slotManageBundles (this=0x1156a4e0) at /home/jtorres/kdesrc/extragear/graphics/krita/plugins/extensions/resourcemanager/resourcemanager.cpp:231
#40 0x00007ff408189380 in ResourceManager::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /home/jtorres/kdesrc/build/extragear/graphics/krita/plugins/extensions/resourcemanager/kritaresourcemanager_autogen/EWIEGA46WW/moc_resourcemanager.cpp:100
#41 0x00007ff4289f360b in QMetaObject::activate(QObject*, int, int, void**) () at kernel/qobject.cpp:3771
#42 0x00007ff42a84df02 in QAction::triggered(bool) () from /usr/lib64/libQt5Widgets.so.5
#43 0x00007ff42a850510 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQt5Widgets.so.5
#44 0x00007ff42a9c0edc in ?? () from /usr/lib64/libQt5Widgets.so.5
#45 0x00007ff42a9c84b0 in ?? () from /usr/lib64/libQt5Widgets.so.5
#46 0x00007ff42a9c94db in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#47 0x00007ff42a892808 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#48 0x00007ff42a9cbb6b in QMenu::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#49 0x00007ff42a8544b1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#50 0x00007ff42a85bd48 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#51 0x00007ff42d955d5d in KisApplication::notify (this=<optimized out>, receiver=0x124260e0, event=0x7fffeae2ca30) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisApplication.cpp:610
#52 0x00007ff4289ca3c9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at ../../include/QtCore/5.11.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:307
#53 0x00007ff42a85b049 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#54 0x00007ff42a8ad703 in ?? () from /usr/lib64/libQt5Widgets.so.5
#55 0x00007ff42a8afece in ?? () from /usr/lib64/libQt5Widgets.so.5
#56 0x00007ff42a8544b1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#57 0x00007ff42a85bb00 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#58 0x00007ff42d955d5d in KisApplication::notify (this=<optimized out>, receiver=0x12654040, event=0x7fffeae2ce90) at /home/jtorres/kdesrc/extragear/graphics/krita/libs/ui/KisApplication.cpp:610
#59 0x00007ff4289ca3c9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at ../../include/QtCore/5.11.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:307
#60 0x00007ff428d849c3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#61 0x00007ff428d868f5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#62 0x00007ff428d6102b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#63 0x00007ff42085c2e6 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#64 0x00007ff4289c909b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#65 0x00007ff4289d1212 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#66 0x000000000040753f in main (argc=<optimized out>, argv=0x7fffeae2d728) at /home/jtorres/kdesrc/extragear/graphics/krita/krita/main.cc:435

Possible duplicates by query: bug 392092.

Reported using DrKonqi
Comment 1 wkg28406 2018-09-24 17:56:12 UTC
krita-4.2.0-pre-alpha-127857b-x86_64.appimage

unable to reproduce

Pressing "Save", message "Could not create the new bundle" is given.
Comment 2 Halla Rempt 2018-09-25 06:38:37 UTC
You don't get the assert because the appimage is built with Q_ASSERT disabled.
Comment 3 Jaime Torres 2018-09-25 07:04:40 UTC
Well, I can reproduce this only in one machine, but I can reproduce it always.
But If I remove the assert and log the files that are not in the store, I get quite a few:
saveResourceToStore Could not open "brushes/abominable_snowman.png"
saveResourceToStore Could not open "brushes/bristle.png"
saveResourceToStore Could not open "brushes/bristles_grouped.gbr"
saveResourceToStore Could not open "brushes/crackles.gbr"
saveResourceToStore Could not open "brushes/hair.png"
saveResourceToStore Could not open "brushes/hearts.gih"
saveResourceToStore Could not open "brushes/rake_dotted.png"
saveResourceToStore Could not open "brushes/vegetal_stylised.gih"
Comment 4 Jaime Torres 2018-09-25 07:19:24 UTC
Created attachment 115215 [details]
Can't paste directly as it is detected as spam

The contents of .local/share/krita/bundles/Krita_4_Default_Resources.bundle
Comment 5 Halla Rempt 2018-10-09 13:09:39 UTC
Yes, I'm rewriting handling of resources and bundles.
Comment 6 Halla Rempt 2020-01-15 09:58:36 UTC
Git commit f6997dd82c11d16a2fed68b2629c7605fc82360d by Boudewijn Rempt.
Committed on 15/01/2020 at 09:31.
Pushed by rempt into branch 'krita/4.2'.

Resource bundle: turn assert into check

Because this isn't a fatal programming error.

M  +4    -1    libs/ui/KisResourceBundle.cpp

https://invent.kde.org/kde/krita/commit/f6997dd82c11d16a2fed68b2629c7605fc82360d