Resource bundle: turn assert into check

Because this isn't a fatal programming error.

BUG:399008